CKA/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  app: web
name: web
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web
---
